--- a/quiz-game-client/package.json
+++ b/quiz-game-client/package.json
@@ -13,7 +13,11 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
