--- a/quiz-game-client/package.json
+++ b/quiz-game-client/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "socket.io-client": "^4.8.1",
-    "cors": "^2.8.5"
+    "vercel": "^44.3.0"
   },
   "engines": {
     "node": "18.x"
