--- a/quiz-game-client/package.json
+++ b/quiz-game-client/package.json
@@ -15,7 +15,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "socket.io-client": "^4.8.1",
-    "vercel": "^44.3.0"
+    "vercel": "^44.3.0",
+    "vite": "^7.0.3"
   },
   "engines": {
     "node": "18.x"
