--- a/quiz-game-client/package.json
+++ b/quiz-game-client/package.json
@@ -14,12 +14,10 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "socket.io-client": "^4.8.1",
-    "vercel": "^44.3.0",
-    "vite": "^7.0.3"
+    "socket.io-client": "^4.8.1"
   },
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -32,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "vite": "^7.0.3"
   }
 }
